--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "yarn build && yarn export"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "glob": "^7.1.5",
     "next": "9.1.1",
     "react": "16.11.0",
     "react-dom": "16.11.0"
