--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "deploy": "yarn build && yarn export"
+    "start": "next start"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "isomorphic-fetch": "^2.2.1",
     "next": "9.1.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
