--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
-    "next": "9.3.2",
+    "next": "^9.4.0",
     "next-mdx-enhanced": "^2.5.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
